# miso-example

./: Dockerfile.build  Makefile  README.md  app.cabal  client.nix  client.stack.yaml  default.nix  miso-example.cabal  server.nix  server.stack.yaml  stack.yaml
src/client/: Main.hs
src/common/: Common.hs
