name:          app
version:       0.1.0.0
synopsis:      First miso app
category:      Web
build-type:    Simple
cabal-version: >=1.10

executable server
  main-is:          Main.hs
  hs-source-dirs:   src/server,
                    src/common
  default-language: Haskell2010
  if impl(ghcjs)
    buildable: False
  else
    ghc-options:   -O2 -threaded -Wall
    build-depends: base,
                   miso,
                   servant,
                   wai,
                   warp

executable client
  main-is:          Main.hs
  hs-source-dirs:   src/client,
                    src/common
  default-language: Haskell2010
  if !impl(ghcjs)
    buildable: False
  else
    ghcjs-options: -dedupe
    build-depends: base,
                   miso,
                   servant
